Test/roundingmodes/InvalidFuncName.bpl.expect
InvalidFuncName.bpl(4,34): error: invalid Ident
1 parse errors detected in InvalidFuncName.bpl
